# weekly_ctf_bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/weekly_ctf_bot/: __init__.py  __main__.py  config.py  database.py  errors.py
src/weekly_ctf_bot/cogs/: challenges.py  general.py
src/weekly_ctf_bot/ui/: __init__.py  challenge.py  challenge_select.py  flag_submission.py  new_challenge.py  server_settings.py  submissions.py  update_challenge.py  update_status.py
